package banana.republic.building;


public enum BuildingType {
    POS_PANTAU,
    LABORATORIUM,
    ROAD
}
