package banana.republic.player;


public enum ActionType {
    BUILD_ROAD,
    BUILD_SETTLEMENT,
    BUILD_CITY,
    BUY_DEV_CARD,
    PLAY_KNIGHT,
    PLAY_ROAD_BUILDING,
    PLAY_MONOPOLY,
    TRADE_DOMESTIC,
    TRADE_MARITIME,
    END_TURN
}
